--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -306,8 +306,7 @@ th {
   display: flex;
   flex-direction: column;
   align-items: center;
-   overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 20px;
   box-sizing: border-box;
   border-radius: 10px;
@@ -348,7 +347,7 @@ th {
 }
 .close-btn {
   position: absolute;
-  right: 0;
+  right: 20px;
   font-size: 28px;
   background-color: red;
   color: white;
@@ -357,26 +356,6 @@ th {
   cursor: pointer;
   z-index: 1001;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-/* for model zoom in and out */
-#modalMedia {
-  max-height: 70vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-}
-#modalMedia img {
-  max-width: 100%;
-  max-height: 80vh;
-  width: auto;
-  height: auto;
-  object-fit: contain;
-  transition: transform 0.3s ease;
-  display: block;
-  margin: auto;
 }
 
 /* Pagination */
@@ -449,7 +428,7 @@ th {
 
 @media (max-width: 768px) {
   .modal-content {
-    padding: 15px;
+    padding: 10px;
     max-height: 90vh;
   }
 
@@ -464,5 +443,11 @@ th {
   .modal-buttons {
     flex-direction: column;
     align-items: stretch;
+  }
+
+  .close-btn {
+    font-size: 24px;
+    right: 15px;
+    padding: 2px 8px;
   }
 }
