css and js change for model

--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -264,6 +264,7 @@ th {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 200px;
+  box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.5);
 }
 .gallery-item img, .gallery-item video {
   width: 100%;
