--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -1,3 +1,152 @@
+/* admin navbar */
+/* nav bar css started here*/
+.navbar2 {
+  position: relative;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.navbar2 .containernav {
+  padding: 1rem 6%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: black;
+}
+
+.navbar2 .logo {
+  height: 30px;
+  overflow: hidden;
+}
+
+.navbar2 .logo a {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.navbar2 .logo a strong {
+  font-family: 'Jost', sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.navbar2 ul {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.navbar2 ul a {
+  font-size: 16px;
+  font-weight: 400;
+  color: #ccc;
+  text-transform: capitalize;
+  transition: all 1s;
+}
+
+.navbar2 ul a:hover {
+  color: #111;
+  background-color: #eee;
+  width: 100%;
+  padding: 0.30rem 0.30rem;
+  border-radius: 0.50rem;
+}
+
+.nav2-list {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.nav2-item {
+  position: relative;
+}
+
+.nav2-item a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.navbar2 ul.active {
+  display: flex;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-menu-nav2 {
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: #333;
+    min-width: 150px;
+    z-index: 1000;
+}
+
+.dropdown-menu-nav2 li a {
+    color: white;
+    padding: 10px;
+    display: block;
+    text-decoration: none;
+}
+
+.dropdown:hover .dropdown-menu-nav2 {
+    display: block;
+}
+
+
+  @media screen and (max-width: 768px) {
+  .navbar2 ul {
+    flex-direction: column;
+    width: 100%;
+    display: none;
+    background-color: #000;
+    padding: 1rem 0;
+  }
+
+  .navbar2 ul.active {
+    display: flex;
+  }
+
+  .navbar2, .menu-toggle {
+    display: flex;
+  }
+
+  .navbar2 ul li {
+    text-align: center;
+    width: 100%;
+    padding: 0.5rem 0;
+  }
+
+  .dropdown-menu-nav2 {
+    position: relative;
+    top: 0;
+    background-color: #222;
+    padding-left: 1rem;
+    display: none;
+  }
+
+  .dropdown:hover .dropdown-menu-nav2 {
+    display: block; /* fallback for hover support */
+  }
+
+  .dropdown.open .dropdown-menu-nav2 {
+    display: block; /* when toggled by JS */
+  }
+}
+
 .adminheader {
     background: linear-gradient(#00000093, #111111b4), url('./../images/adminside/adminhome.jpg');
     background-position: 70% 30%;
