--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -31,7 +31,7 @@
                     </div>
                     <button type="submit" class="btn" id="btnlogin">Login</button>
                     <div class="loginregister">
-                        <p>Don't have an account?<a href="/register" class="registerlink"> Register</a></p>
+                        <p>Don't have an account?<a href="/register" class="registerlink"> Register here</a></p>
                     </div>
                 </form>
             </div>
